--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WorkoutActivity"></activity>
+        <activity android:name=".AboutDeveloper"/>
+        <activity android:name=".WorkoutActivity" />
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
